--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,5 +1,5 @@
 name: Survival
-main: me.ES96.Survival.com
+main: me.ES96.Survival.com.Survival
 version: 0.1.2
 description: Survival server plugin
 author: SendCoffee
